--- a/sigma.tex
+++ b/sigma.tex
@@ -192,7 +192,7 @@ The functor \[\{\Spec T \xrightarrow{u} \Spec E_0\} \to \left\{ \text{trivializa
 However, the use of \Cref{BSUtoBUtoCPinftyIsSexseq} inspires us to spend a moment longer with the associated formal schemes.  An equivalent statement is that there is a short exact sequence of formal group schemes
 \begin{center}
 \begin{tikzcd}
-BSU_E \arrow{r} \arrow[-,double]{d} & BU_E \arrow{r}{B\det} \arrow[-,double]{d} & BU(1) \arrow[-,double]{d} \\
+BSU_E \arrow{r} \arrow[-,equal]{d} & BU_E \arrow{r}{B\det} \arrow[-,equal]{d} & BU(1) \arrow[-,equal]{d} \\
 \SDiv_0 \CP^\infty_E \arrow{r} & \Div_0 \CP^\infty_E \arrow{r}{\mathrm{sum}} & \CP^\infty_E,
 \end{tikzcd}
 \end{center}
@@ -261,7 +261,7 @@ In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an ac
 % \end{remark}
 
 
-% Identify the Thom sheaf of the universal bundle on $BSU$ as $C^2(\G; \sheaf I(0))$, together with its $C^2(\G, \Gm)$--torsor structure, and note that this automatically promotes the classifying map $MSU^E \to C^2(\G; \sheaf I(0))$ to an isomorphism. 
+% Identify the Thom sheaf of the universal bundle on $BSU$ as $C^2(\G; \sheaf I(0))$, together with its $C^2(\G, \Gm)$--torsor structure, and note that this automatically promotes the classifying map $MSU^E \to C^2(\G; \sheaf I(0))$ to an isomorphism.
 
 % \begin{remark}\todo[color=red]{Actually work this out.}
 % It should be possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?  Even if one can find an example of this, I think it will be somewhat artificial: the sequence of group schemes \[0 \to BSU_E \to BU_E \to BU(1)_E \to 0\] is short exact, \emph{and} it has a splitting on the level of formal schemes.  The splitting is what gives you the isomorphism on points $BSU_E(T) \times BU(1)_E(T) \cong BU_E(T)$.  On the other hand, because the splitting \emph{isn't} a map of formal groups, it doesn't survive to the Cartier dual short exact sequence \[0 \from BSU^E \from BU^E \from BU(1)^E \from 0,\] so this will come down to exhibiting a test ring $T = E_*$ for which $BU^E(T) \to BSU^E(T)$, despite being induced by an fppf-surjective map of sheaves, is not surjective on sections over $T$.  Of course, this comes down concretely to solving for a preimage under the map \[1 - g(x) \mapsto \frac{1 - g(x +_{\G} y)}{(1 - g(x))(1 - g(y))},\] which is more plodding but might offer insight into what sort of ring (and thus orientation) you're looking for.
@@ -394,7 +394,7 @@ The main tool used to build the model is the following construction:
 A map $f\co X \to Y$ of spaces induces a map $f_E \co X_E \to Y_E$ of formal schemes.  In the case that $Y$ is a commutative $H$--space and $Y_E$ is connected, we can construct a map according to the composite
 \begin{center}
 \begin{tikzcd}
-X_E \times \InternalHom{GroupSchemes}(Y_E, \Gm) \arrow[-,double]{d} \arrow[densely dotted]{rr} & & \A^1 \\
+X_E \times \InternalHom{GroupSchemes}(Y_E, \Gm) \arrow[-,equal]{d} \arrow[densely dotted]{rr} & & \A^1 \\
 X_E \times \InternalHom{FormalGroups}(Y_E, \G_m) \arrow["f \times 1"]{r} & Y_E \times \InternalHom{FormalGroups}(Y_E, \G_m) \arrow["\operatorname{ev}"]{r} & \G_m. \arrow{u}
 \end{tikzcd}
 \end{center}
@@ -577,7 +577,7 @@ This is a direct consequence of the $5$--lemma.
 % (\CP^\infty_E)^{\times 3} \times C^3(\CP^\infty_E; \Gm) \arrow{r} & (\CP^\infty_E)^{\times 3} \times \InternalHom{FormalSchemes}((\CP^\infty_E)^{\times 3}, \Gm) \arrow["\text{eval}"]{u}.
 % \end{tikzcd}
 % \end{center}
-% The effect of postcomposing with the Weil pairing map can be viewed instead as precomposing the bottom-right corner with the 
+% The effect of postcomposing with the Weil pairing map can be viewed instead as precomposing the bottom-right corner with the
 
 
 
@@ -868,7 +868,7 @@ Let $F \xrightarrow i E \xrightarrow r B$ be a fibration of connected double loo
 Let $E \to B' \to B$ be connective coverings of a simply connected double loopspace $B$.  Consider the following diagram of fiber sequences:
 \begin{center}
 \begin{tikzcd}
-F' \arrow{d} \arrow{r} & E \arrow[-,double]{d} \arrow{r} & B' \arrow{d} \\
+F' \arrow{d} \arrow{r} & E \arrow[-,equal]{d} \arrow{r} & B' \arrow{d} \\
 F \arrow{r} & E \arrow{r} & B.
 \end{tikzcd}
 \end{center}
@@ -950,7 +950,7 @@ This goes similarly to the one above.  You can compute that the composite $\Div 
 \begin{tikzcd}
 & & & K_* \arrow{d} \\
 & & & K_* K(\Z, 3) \arrow{d} \\
-K_* \arrow{r} & K_* B\Spin \arrow{r} \arrow{d} & K_* BSU \arrow{r}{\tau} \arrow[-,double]{d} & K_* BU[6, \infty) \arrow{d}{\delta} \\
+K_* \arrow{r} & K_* B\Spin \arrow{r} \arrow{d} & K_* BSU \arrow{r}{\tau} \arrow[-,equal]{d} & K_* BU[6, \infty) \arrow{d}{\delta} \\
 K_* \arrow{r} & K_* BSO \arrow{r}{i} & K_* BSU \arrow{r}{1 - \xi} & K_* BSU \arrow{d} \\
 & & & K_* .
 \end{tikzcd}
