first pass at organizing 5.5. also introduce 5.6

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -603,7 +603,7 @@ The functor $D_*\co \CatOf{HopfAlgebras}^{>0, \fin}_{\F_p/} \to \CatOf{GradedDMo
 
 
 
-\section{Ordinary cooperations for Landweber flat theories}
+\section{Ordinary cooperations for Landweber flat theories}\label{LEFTCooperations}
 
 \begin{center}
 \textbf{Convention: We will write $H$ for $H\F_p$ for the duration of the lecture.}
