--- a/main.bib
+++ b/main.bib
@@ -606,6 +606,24 @@ MRREVIEWER = {Douglas C. Ravenel},
        URL = {http://dx.doi.org/10.2307/1971192},
 }
 
+@article {CowenMortonStrickland,
+    AUTHOR = {Cowen Morton, Dena S. and Strickland, Neil},
+     TITLE = {The {H}opf rings for {$K{\rm O}$} and {$K{\rm U}$}},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {166},
+      YEAR = {2002},
+    NUMBER = {3},
+     PAGES = {247--265},
+      ISSN = {0022-4049},
+     CODEN = {JPAAA2},
+   MRCLASS = {55P43 (16W30 55N15)},
+  MRNUMBER = {1870619},
+MRREVIEWER = {Mark Hovey},
+       DOI = {10.1016/S0022-4049(01)00017-2},
+       URL = {http://dx.doi.org/10.1016/S0022-4049(01)00017-2},
+}
+
 @article {Nave,
     AUTHOR = {Nave, Lee S.},
      TITLE = {The {S}mith-{T}oda complex {$V((p+1)/2)$} does not exist},
@@ -743,6 +761,12 @@ MRREVIEWER = {R. G. Larson},
   title        = {\textit{Stacks Project}},
   howpublished = {\url{http://stacks.math.columbia.edu}},
   year         = {2014},
+}
+
+@misc{StricklandBottPeriodicity,
+  author = {Strickland, Neil},
+  title = {{B}ott Periodicity and {H}opf Rings},
+  note = {PhD Thesis}
 }
 
 @article {StricklandEthyOfBSigma,
